--- a/Desktop/Web Development/laraBerge2/style.css
+++ b/Desktop/Web Development/laraBerge2/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +21,7 @@ body {
     height: 180px;
 }
 
-#logo-container img{
+#logo-container img {
     width: 180px;
     height: 180px;
 }
@@ -186,10 +184,10 @@ i {
 #gallery {
     width: 100%;
     background: darkgrey;
-    height: 1000px;
+    height: 1100px;
     display: grid;
     grid-template-columns: 1fr 4fr;
-
+    padding-top: 50px;
 }
 
 #smallGallery {
@@ -202,11 +200,15 @@ i {
     overflow: hidden;
     background-attachment: fixed;
     align-items: center;
+    margin-left: 20% !important;
+    border: 2px solid purple;
+    border-radius: 30px;
+    margin: 1rem;
 
 }
 
 #galleryDisplay {
-    margin-left: 35%;
+    margin-left: 25%;
 }
 
 #mainDisplay {
@@ -317,8 +319,8 @@ i {
 }
 
 .mainTitle {
-    font-size: 3rem;
-    font-family: "ZCOOL XiaoWei";
+    font-size: 4rem;
+    font-family: "dancing script";
     margin-bottom: 3rem;
 
 }
